--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@react-pdf/renderer": "^3.1.14",
     "@types/mdx": "^2.0.10",
-    "next": "14.1.1",
+    "next": "^15.0.3",
     "next-themes": "^0.2.1",
     "pdf-lib": "^1.17.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
     "typewriter-effect": "^2.21.0"
   },
