addint descr to workflow

--- a/.github/workflows/invite.yml
+++ b/.github/workflows/invite.yml
@@ -1,7 +1,8 @@
+name: Invite User to GitHub Org on labeled issue
+
 on:
   issues:
     types: [labeled]
-  workflow_dispatch:
 
 jobs:
   automate_invite:
@@ -19,4 +20,4 @@ jobs:
             Note that we assume you read the [disclaimer](https://wcu.edu.pl/pages/disclaimer) carefully :)
           existingMemberMessage: "You are already an alumni, please DO NOT create multiple requests or else we will be forced to remove you."
         env:
-          INVITE_TOKEN: ${{ secrets.GH_INVITE_TO_ORG }}
+          INVITE_TOKEN: ${{ secrets.INVITE_TOKEN }}
