- add copyright removal issue template - add new reviews and autoplay - update markdown styling - update theme switcher design

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "input": "^1.0.1",
     "label": "^0.2.2",
