--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "@types/fontkit": "^2.0.8",
     "@types/mdx": "^2.0.13",
+    "@types/svg-to-pdfkit": "^0.1.3",
     "@types/webpack-env": "^1.18.8",
     "blob-stream": "^0.1.3",
     "checkbox": "^0.0.1",
@@ -41,12 +42,15 @@
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
+    "svg-to-pdfkit": "^0.1.8",
     "tailwind-merge": "^3.4.0",
+    "to-words": "^5.1.0",
     "typewriter-effect": "^2.22.0",
     "zod": "^4.3.2"
   },
