updating diploma generating

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "font:slice:noto": "mkdir -p public/fonts/slices && pyftsubset public/fonts/NotoSerifSC-Bold.ttf --output-file=public/fonts/slices/NotoSerifSC-Bold.basic.woff2 --flavor=woff2 --layout-features='*' --unicodes='U+0020-007E,U+00A0-00FF,U+2000-206F,U+3000-303F,U+FF00-FFEF' && pyftsubset public/fonts/NotoSerifSC-Bold.ttf --output-file=public/fonts/slices/NotoSerifSC-Bold.cjk.woff2 --flavor=woff2 --layout-features='*' --unicodes='U+0020-007E,U+00A0-00FF,U+2000-206F,U+3000-303F,U+3400-4DBF,U+4E00-9FFF,U+FF00-FFEF'"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
+    "@fontsource-variable/noto-serif-sc": "^5.2.10",
+    "@hookform/resolvers": "^5.2.2",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^16.1.1",
+    "@next/mdx": "^16.1.6",
     "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -36,40 +38,41 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "font-slice": "^1.0.2",
     "input": "^1.0.1",
     "label": "^0.2.2",
-    "lucide-react": "^0.544.0",
-    "next": "^16.1.1",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-hook-form": "^7.69.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "svg-to-pdfkit": "^0.1.8",
     "tailwind-merge": "^3.4.0",
     "to-words": "^5.1.0",
     "typewriter-effect": "^2.22.0",
-    "zod": "^4.3.2"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/blob-stream": "^0.1.33",
-    "@types/node": "^20.19.27",
+    "@types/node": "^25.2.1",
     "@types/pdfkit": "^0.17.4",
-    "@types/react": "19.2.7",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.1",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
   "overrides": {
-    "@types/react": "19.2.7",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3"
   },
   "prettier": {
