--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwind-merge": "^3.4.0",
     "to-words": "^5.1.0",
     "typewriter-effect": "^2.22.0",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
