--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "font:slice:noto": "mkdir -p public/fonts/slices && pyftsubset public/fonts/NotoSerifSC-Bold.ttf --output-file=public/fonts/slices/NotoSerifSC-Bold.basic.woff2 --flavor=woff2 --layout-features='*' --unicodes='U+0020-007E,U+00A0-00FF,U+2000-206F,U+3000-303F,U+FF00-FFEF' && pyftsubset public/fonts/NotoSerifSC-Bold.ttf --output-file=public/fonts/slices/NotoSerifSC-Bold.cjk.woff2 --flavor=woff2 --layout-features='*' --unicodes='U+0020-007E,U+00A0-00FF,U+2000-206F,U+3000-303F,U+3400-4DBF,U+4E00-9FFF,U+FF00-FFEF'"
+    "lint": "eslint"
   },
   "dependencies": {
     "@fontsource-variable/noto-serif-sc": "^5.2.10",
@@ -64,7 +63,7 @@
     "@types/pdfkit": "^0.17.4",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "eslint": "^10.0.0",
+    "eslint": "^9.22.0",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
