migrating to oxlint and oxfmt

--- a/.github/ISSUE_TEMPLATE/apply.yaml
+++ b/.github/ISSUE_TEMPLATE/apply.yaml
@@ -1,11 +1,11 @@
 name: "Alumni Application"
 description: "Wild Chicken Unviersity Alumni Application"
 title: "Alumni Application"
-labels: ['apply-wcu']
+labels: ["apply-wcu"]
 
 body:
   - type: markdown
-    attributes: 
+    attributes:
       value: |
         I want to register and become a Wild Chicken University Alumni.
 
