--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "@types/pdfkit": "^0.17.4",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "eslint": "^9.22.0",
     "eslint-config-next": "16.1.6",
+    "oxfmt": "^0.35.0",
+    "oxlint": "^1.50.0",
+    "oxlint-tsgolint": "^0.15.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
