--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "fmt": "oxfmt",
+    "fmt:check": "oxfmt --check",
+    "lint": "oxlint --type-aware --type-check",
+    "lint:fix": "oxlint --fix"
   },
   "dependencies": {
     "@fontsource-variable/noto-serif-sc": "^5.2.10",
@@ -25,7 +28,6 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/typography": "^0.5.19",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "@types/fontkit": "^2.0.8",
     "@types/mdx": "^2.0.13",
     "@types/svg-to-pdfkit": "^0.1.3",
@@ -56,14 +58,12 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/blob-stream": "^0.1.33",
     "@types/node": "^25.2.1",
     "@types/pdfkit": "^0.17.4",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "eslint-config-next": "16.1.6",
     "oxfmt": "^0.35.0",
     "oxlint": "^1.50.0",
     "oxlint-tsgolint": "^0.15.0",
@@ -74,14 +74,5 @@
   "overrides": {
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3"
-  },
-  "prettier": {
-    "plugins": [
-      "@trivago/prettier-plugin-sort-imports"
-    ],
-    "importOrder": [
-      "^@/.*$",
-      "^[./]"
-    ]
   }
 }
