--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@tanstack/react-form": "^1.28.3",
     "@tailwindcss/typography": "^0.5.19",
     "@types/fontkit": "^2.0.8",
     "@types/mdx": "^2.0.13",
@@ -46,6 +47,7 @@
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
