--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
-    "@tanstack/react-form": "^1.28.3",
     "@tailwindcss/typography": "^0.5.19",
+    "@tanstack/react-form": "^1.28.3",
     "@types/fontkit": "^2.0.8",
     "@types/mdx": "^2.0.13",
     "@types/svg-to-pdfkit": "^0.1.3",
@@ -52,6 +52,8 @@
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "svg-to-pdfkit": "^0.1.8",
     "tailwind-merge": "^3.4.0",
     "to-words": "^5.1.0",
